--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/usr/bin/python3"
+    "python.pythonPath": "C:\\Users\\Flayiva_07\\anaconda3\\envs\\pytorchenv\\python.exe"
 }
